aggiunto il prompt con la richiesta del Nome

--- a/snack-4/index.html
+++ b/snack-4/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-
-    <script src="../snack-4/index.html"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
